<resources>
    <string name="app_name">CountingScore</string>
    <string name="main_text">Score your Match Today!</string>
    <string name="vollyball_image">vollyball_image</string>
    <string name="text_button_volleyball">Ini Volleyball</string>
    <string name="text_button_basketball">Ini BasketBall</string>
    <string name="text_button_soccer">Ini Soccer</string>
    <string name="TODO">Ini Batminton</string>
</resources>